Fully rebase tree

--- a/overlay/AOSPAFogFrameworksOverlay/res/values/config.xml
+++ b/overlay/AOSPAFogFrameworksOverlay/res/values/config.xml
@@ -19,4 +19,14 @@
     <!-- Fingerprint from stock ROM -->
     <string name="config_stockFingerprint" translatable="false">Redmi/fog_global/fog:14/TKQ1.221114.001/V14.0.2.0.SGEMIXM:user/release-keys</string>
 
+    <!-- Defines the sysfs attribute path used by the device
+         to enable/disable DC dimming. -->
+    <string name="config_deviceDcDimmingSysfsNode">/sys/devices/platform/soc/soc:qcom,dsi-display-primary/msm_fb_ea_enable</string>
+
+    <!-- Whether usage of the proximity sensor during doze is supported -->
+    <bool name="doze_proximity_sensor_supported">false</bool>
+
+    <!-- Pocket Lock -->
+    <bool name="config_pocketModeSupported">true</bool>
+
 </resources>
