--- a/overlay/FogFrameworksOverlay/res/values/config.xml
+++ b/overlay/FogFrameworksOverlay/res/values/config.xml
@@ -92,237 +92,80 @@
         <item>3500</item>
         <item>4000</item>
         <item>4500</item>
-        <item>5000</item>
-        <item>5500</item>
-        <item>6000</item>
-        <item>6500</item>
-        <item>7000</item>
-        <item>7500</item>
-        <item>8000</item>
-        <item>8500</item>
-        <item>9000</item>
-        <item>9500</item>
-        <item>10000</item>
-        <item>10500</item>
-        <item>11000</item>
-        <item>11500</item>
-        <item>12000</item>
-        <item>12500</item>
-        <item>13000</item>
-        <item>13500</item>
-        <item>14000</item>
-        <item>14500</item>
-        <item>15000</item>
-        <item>16000</item>
-        <item>17000</item>
-        <item>18000</item>
-        <item>19000</item>
-        <item>20000</item>
-        <item>21000</item>
-        <item>22000</item>
-        <item>23000</item>
-        <item>24000</item>
-        <item>25000</item>
-        <item>26000</item>
-        <item>27000</item>
-        <item>28000</item>
-        <item>29000</item>
-        <item>30000</item>
-        <item>35000</item>
-        <item>40000</item>
-        <item>45000</item>
-        <item>50000</item>
-        <item>55000</item>
-        <item>60000</item>
-        <item>65000</item>
-        <item>70000</item>
-        <item>75000</item>
-        <item>80000</item>
-        <item>85000</item>
-        <item>90000</item>
-        <item>95000</item>
-        <item>100000</item>
     </integer-array>
 
     <!-- Array of desired screen brightness in nits corresponding to the lux values
-         in the config_autoBrightnessLevels array. As with config_screenBrightnessMinimumNits and
-         config_screenBrightnessMaximumNits, the display brightness is defined as the measured
-         brightness of an all-white image.
-         If this is defined then:
-            - config_autoBrightnessLcdBacklightValues should not be defined
-            - config_screenBrightnessNits must be defined
-            - config_screenBrightnessBacklight must be defined
-         This array should have size one greater than the size of the config_autoBrightnessLevels
-         array. The brightness values must be non-negative and non-decreasing. This must be
-         overridden in platform specific overlays -->
+        in the config_autoBrightnessLevels array. As with config_screenBrightnessMinimumNits and
+        config_screenBrightnessMaximumNits, the display brightness is defined as the measured
+        brightness of an all-white image.
+        If this is defined then:
+         - config_autoBrightnessLcdBacklightValues should not be defined
+         - config_screenBrightnessNits must be defined
+         - config_screenBrightnessBacklight must be defined
+        This array should have size one greater than the size of the config_autoBrightnessLevels
+        array. The brightness values must be non-negative and non-decreasing. This must be
+        overridden in platform specific overlays -->
     <array name="config_autoBrightnessDisplayValuesNits">
-        <item>3.3</item>
-        <item>4.3</item>
-        <item>5</item>
-        <item>17</item>
-        <item>24</item>
-        <item>31</item>
-        <item>34</item>
-        <item>46</item>
-        <item>59</item>
-        <item>76</item>
-        <item>81</item>
-        <item>82</item>
-        <item>82</item>
-        <item>82</item>
-        <item>83</item>
-        <item>83</item>
-        <item>83</item>
-        <item>84</item>
-        <item>84</item>
-        <item>85</item>
-        <item>85</item>
-        <item>85</item>
-        <item>85</item>
-        <item>86</item>
-        <item>86</item>
-        <item>87</item>
-        <item>89</item>
-        <item>90</item>
-        <item>91</item>
-        <item>93</item>
-        <item>94</item>
-        <item>96</item>
-        <item>97</item>
-        <item>99</item>
-        <item>100</item>
-        <item>101</item>
-        <item>104</item>
-        <item>105</item>
-        <item>106</item>
-        <item>108</item>
-        <item>109</item>
-        <item>111</item>
-        <item>112</item>
-        <item>114</item>
-        <item>116</item>
-        <item>137</item>
-        <item>157</item>
-        <item>180</item>
-        <item>205</item>
-        <item>226</item>
-        <item>257</item>
-        <item>280</item>
-        <item>295</item>
-        <item>369</item>
-        <item>400</item>
-        <item>416.7</item>
-        <item>433.3</item>
-        <item>450</item>
-        <item>466.7</item>
-        <item>483.3</item>
-        <item>500</item>
-        <item>512.5</item>
-        <item>525</item>
-        <item>537.5</item>
-        <item>550</item>
-        <item>562.5</item>
-        <item>575</item>
-        <item>587.5</item>
-        <item>600</item>
-        <item>610</item>
-        <item>620</item>
-        <item>630</item>
-        <item>640</item>
-        <item>650</item>
-        <item>660</item>
-        <item>670</item>
-        <item>680</item>
-        <item>690</item>
-        <item>700</item>
-        <item>705</item>
-        <item>710</item>
-        <item>715</item>
-        <item>720</item>
-        <item>725</item>
-        <item>730</item>
-        <item>735</item>
-        <item>740</item>
-        <item>745</item>
-        <item>750</item>
-        <item>755</item>
-        <item>760</item>
-        <item>765</item>
-        <item>770</item>
-        <item>775</item>
-        <item>800</item>
-        <item>816.7</item>
-        <item>833.3</item>
-        <item>850</item>
-        <item>866.7</item>
-        <item>883.3</item>
-        <item>900</item>
-        <item>914.3</item>
-        <item>928.6</item>
-        <item>942.9</item>
-        <item>957.1</item>
-        <item>971.4</item>
-        <item>985.7</item>
-        <item>1000</item>
+        <item>3.5</item>
+        <item>4.8</item>
+        <item>6.0</item>
+        <item>15.0</item>
+        <item>21.0</item>
+        <item>27.0</item>
+        <item>36.0</item>
+        <item>52.0</item>
+        <item>71.0</item>
+        <item>87.0</item>
+        <item>97.0</item>
+        <item>98.0</item>
+        <item>98.0</item>
+        <item>98.0</item>
+        <item>99.0</item>
+        <item>99.0</item>
+        <item>100.0</item>
+        <item>100.0</item>
+        <item>100.0</item>
+        <item>101.0</item>
+        <item>101.0</item>
+        <item>102.0</item>
+        <item>103.0</item>
+        <item>103.0</item>
+        <item>103.0</item>
+        <item>106.0</item>
+        <item>108.0</item>
+        <item>110.0</item>
+        <item>112.0</item>
+        <item>114.0</item>
+        <item>116.0</item>
+        <item>118.0</item>
+        <item>119.0</item>
+        <item>122.0</item>
+        <item>123.0</item>
+        <item>125.0</item>
+        <item>128.0</item>
+        <item>130.0</item>
+        <item>131.0</item>
+        <item>134.0</item>
+        <item>136.0</item>
+        <item>137.0</item>
+        <item>140.0</item>
+        <item>142.0</item>
+        <item>144.0</item>
+        <item>169.0</item>
+        <item>196.0</item>
+        <item>222.0</item>
+        <item>248.0</item>
+        <item>270.0</item>
+        <item>300.0</item>
+        <item>320.0</item>
+        <item>335.0</item>
+        <item>400.0</item>
+        <item>400.0</item>
+        <item>425.0</item>
+        <item>450.0</item>
+        <item>480.0</item>
     </array>
 
-    <!-- Fast brightness animation ramp rate in brightness units per second-->
-    <integer translatable="false" name="config_brightness_ramp_rate_fast">2466</integer>
-
-    <!-- Slow brightness animation ramp rate in brightness units per second-->
-    <integer translatable="false" name="config_brightness_ramp_rate_slow">1973</integer>
-    
-    <!-- The default refresh rate. Redfin manages this using the peak refresh rate setting, so set
-         this value to 0 so it has no effect. -->
-    <integer name="config_defaultRefreshRate">0</integer>
-
-    <!-- The default peak refresh rate. -->
-    <integer name="config_defaultPeakRefreshRate">90</integer>
-
-    <!-- Default refresh rate in the zone defined by brightness and ambient thresholds.
-         If non-positive, then the refresh rate is unchanged even if thresholds are configured. -->
-    <integer name="config_defaultRefreshRateInZone">60</integer>
-    
-    <!-- The display uses different gamma curves for different refresh rates. It's hard for panel
-         vendors to tune the curves to have exact same brightness for different refresh rate. So
-         flicker could be observed at switch time. The issue is worse at the gamma lower end.
-         In addition, human eyes are more sensitive to the flicker at darker environment.
-         To prevent flicker, we only support higher refresh rates if the display brightness is above
-         a threshold.
-         For example, no higher refresh rate if
-             display brightness <= disp0 && ambient brightness <= amb0
-             || display brightness <= disp1 && ambient brightness <= amb1 -->
-    <integer-array name="config_brightnessThresholdsOfPeakRefreshRate">
-        <!-- System brightness for 25 nits: round((25-2)/(1000-2)*(255-1)+1) = 7 -->
-        <item>7</item> <!-- 27% UI brightness -->
-        <!-- System brightness for 40 nits: round((40-2)/(1000-2)*(255-1)+1) = 11 -->
-        <item>11</item> <!-- 34% UI brightness -->
-    </integer-array>
-    <integer-array name="config_ambientThresholdsOfPeakRefreshRate">
-        <item>-1</item>
-        <item>15</item>
-    </integer-array>
-
-    <!-- If true, the display will be shifted around in ambient mode. -->
-    <bool name="config_enableBurnInProtection">true</bool>
-    <bool name="config_statusBarBurnInProtection">true</bool>
-    
-    <!-- Specifies the maximum burn-in offset displacement from the center. If -1, no maximum value
-         will be used. -->
-    <integer name="config_burnInProtectionMaxRadius">70</integer>
-
-    <!-- Specifies the minimum burn-in offset horizontally. -->
-    <integer name="config_burnInProtectionMinHorizontalOffset">-15</integer>
-
-    <!-- Specifies the maximum burn-in offset horizontally. -->
-    <integer name="config_burnInProtectionMaxHorizontalOffset">15</integer>
-
-    <!-- Specifies the minimum burn-in offset vertically. -->
-    <integer name="config_burnInProtectionMinVerticalOffset">-40</integer>
-
-    <!-- Specifies the maximum burn-in offset vertically. -->
-    <integer name="config_burnInProtectionMaxVerticalOffset">40</integer>
-    
     <!-- The bounding path of the cutout region of the main built-in display.
          Must either be empty if there is no cutout region, or a string that is parsable by
          {@link android.util.PathParser}.
@@ -340,51 +183,12 @@
                 <string ...>M -5,0 L -5,10 L 5,10 L 5,0 Z @dp</string>
          @see https://www.w3.org/TR/SVG/paths.html#PathData
          -->
-    <string translatable="false" name="config_mainBuiltInDisplayCutout">
-        M -31.85 57.275 a 31.85 31.85 90 1 0 63.7 0 a 31.85 31.85 90 1 0 -63.7 0 Z
-    </string>
-
-     <!-- Like config_mainBuiltInDisplayCutout, but this path is used to report the
-         one single bounding rect per device edge to the app via
-         {@link DisplayCutout#getBoundingRect}. Note that this path should try to match the visual
-         appearance of the cutout as much as possible, and may be smaller than
-         config_mainBuiltInDisplayCutout
-         -->
-    <string translatable="false" name="config_mainBuiltInDisplayCutoutRectApproximation">
-        M 493.5,0
-        h 95
-        v 95
-        h -95
-        Z
-        @left
-    </string>
+    <string translatable="false" name="config_mainBuiltInDisplayCutout">M 0,0 H -64 V 60 H 64 V 0 H 0 Z</string>
 
     <!-- Whether the display cutout region of the main built-in display should be forced to
         black in software (to avoid aliasing or emulate a cutout that is not physically existent).
     -->
-    <bool name="config_fillMainBuiltInDisplayCutout">true</bool>
-    
-    <!-- An array of arrays of side fingerprint sensor properties relative to each display.
-         Note: this value is temporary and is expected to be queried directly
-         from the HAL in the future. -->
-    <array name="config_sfps_sensor_props" translatable="false">
-        <item>@array/config_sfps_sensor_props_0</item>
-    </array>
-
-    <array name="config_sfps_sensor_props_0" translatable="false">
-        <item></item>
-        <item></item>
-        <item>930</item> <!--item>sensorLocationY</item-->
-        <item>150</item> <!--item>sensorRadius</item-->
-    </array>
-
-    <!-- Whether device has a big physical display cutout -->
-    <bool name="config_physicalDisplayCutout">true</bool>
-
-    <!-- Type of the double tap sensor. Empty if double tap is not supported. -->
-    <string name="config_dozeDoubleTapSensorType" translatable="false">co.aospa.sensor.double_tap</string>
-
-    <!-- Type of the tap sensor. Empty if tap is not supported. -->
-    <string name="config_dozeTapSensorType" translatable="false">co.aospa.sensor.single_tap</string>
-
+    <bool name="config_fillMainBuiltInDisplayCutout">false</bool>
+    <string name="config_stockFingerprint" translatable="false">Redmi/fog_global/fog:13/TKQ1.221114.001/V14.0.5.0.TGEMIXM:user/release-keys</string>    
+    <bool name="config_avoidGfxAccel">true</bool>
 </resources>
